--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="mystyle.css" />
   </head>
   <body>
-    <div id="app"></div>
+    <div tabindex="0" id="app"></div>
     <script src="bundled.js"></script>
   </body>
 </html>
