--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="mystyle.css" />
+    <link rel="icon" type="image/x-icon" href="https://www.hmek.hu/images/favicon.png">
   </head>
   <body>
     <div tabindex="0" id="app"></div>
