webpack for dist

--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <link rel="stylesheet" href="mystyle.css" />
-    <link rel="icon" type="image/x-icon" href="https://www.hmek.hu/images/favicon.png">
-  </head>
+    <link rel="icon" type="image/x-icon" href="https://www.hmek.hu/images/favicon.png" />
+  <script defer src="/bundled.js"></script></head>
   <body>
     <div tabindex="0" id="app"></div>
-    <script src="bundled.js"></script>
+    <!-- <script src="bundled.js"></script>  -->
   </body>
 </html>
