--- a/app/index-template.html
+++ b/app/index-template.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="mystyle.css" />
     <link rel="icon" type="image/x-icon" href="https://www.hmek.hu/images/favicon.png" />
-  </head>
+  <script defer src="/bundled.js"></script></head>
   <body>
     <div tabindex="0" id="app"></div>
     <!-- <script src="bundled.js"></script>  -->
