complete new user ticket

--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<html>
+<html><head><script defer src="/bundled.js"></script></head>
   <head>
     <link rel="stylesheet" href="mystyle.css" />
     <link rel="icon" type="image/x-icon" href="https://www.hmek.hu/images/favicon.png" />
