--- a/app/index-template.html
+++ b/app/index-template.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="mystyle.css" />
+    <link rel="stylesheet" href="/mystyle.css" />
     <link rel="icon" type="image/x-icon" href="https://www.hmek.hu/images/favicon.png" />
   <body>
     <div tabindex="0" id="app"></div>
