--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html><head><script defer src="/bundled.js"></script></head>
   <head>
-    <link rel="stylesheet" href="mystyle.css" />
+    <link rel="stylesheet" href="/mystyle.css" />
     <link rel="icon" type="image/x-icon" href="https://www.hmek.hu/images/favicon.png" />
   <body>
     <div tabindex="0" id="app"></div>
