--- a/app/index-template.html
+++ b/app/index-template.html
@@ -1,9 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="hu">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/mystyle.css" />
     <link rel="icon" type="image/x-icon" href="https://www.hmek.hu/images/favicon.png" />
+  </head>
   <body>
     <div tabindex="0" id="app"></div>
-    <!-- <script src="bundled.js"></script>  -->
   </body>
 </html>
